--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "isomorphic-fetch": "^2.2.1",
     "mocha": "^3.3.0",
     "source-map-support": "^0.4.15",
+    "ts-node": "^10.0.0",
     "tslint": "^5.1.0",
     "typescript": "^2.3.1"
   },
